# notaforge

./: Cargo.toml  LICENSE  README.md  config.toml  flake.nix  justfile  shell.nix
src/: anki.rs  card_template.rs  config.rs  main.rs  vocab_service.rs
