[package]
name = "notaforge"
version = "0.1.0"
edition = "2024"

[dependencies]
ankiconnect-rs = "1.0.0"
anyhow = "1.0.100"
clap = { version = "4.5.41", features = ["derive"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
toml = "0.8.19"
urlencoding = "2.1.3"
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3.31"

[dev-dependencies]
tempfile = "3.13.0"
